# fuse

./: .buildinfo  .gitignore  Makefile  about.html  api.html  conftest.py  constraints.txt  genindex.html  index.html  install.html  manual.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_loopy.c  triples.html
_generated/: fuse.cells.CellComplexToFiatHypercube.html  fuse.cells.CellComplexToFiatSimplex.html  fuse.cells.CellComplexToFiatTensorProduct.html  fuse.cells.CellComplexToUFL.html  fuse.cells.Edge.html  fuse.cells.Point.html  fuse.cells.TensorProductPoint.html  fuse.cells.compare_topologies.html  fuse.cells.compute_scaled_verts.html  fuse.cells.constructCellComplex.html  fuse.cells.construct_attach_2d.html  fuse.cells.construct_attach_3d.html  fuse.cells.firedrake_quad.html  fuse.cells.firedrake_triangle.html  fuse.cells.html  fuse.cells.make_tetrahedron.html  fuse.cells.normalise.html  fuse.cells.polygon.html  fuse.cells.topo_pos.html  fuse.cells.ufc_quad.html  fuse.cells.ufc_tetrahedron.html  fuse.cells.ufc_triangle.html  fuse.dof.BarycentricPolynomialKernel.html  fuse.dof.BaseKernel.html  fuse.dof.ComponentKernel.html  fuse.dof.DOF.html  fuse.dof.DeltaPairing.html  fuse.dof.FuseFunction.html  fuse.dof.ImmersedDOF.html  fuse.dof.L2Pairing.html  fuse.dof.Pairing.html  fuse.dof.PointKernel.html  fuse.dof.PolynomialKernel.html  fuse.dof.VectorKernel.html  fuse.dof.html  fuse.element_construction.bary_tangents.html  fuse.element_construction.barycentric_coords.html  fuse.element_construction.construct_dgN.html  (+74 more)
api/: cells.html  (+7 more)
(+189 files in other folders)
