[build-system]
requires = [
  "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "fuse-element"
version = "0.1.1"
authors = [
  {name = "India Marsden", email = "marsden@maths.ox.ac.uk"},
]
description = "a unified, serialisable representation of a Finite Element"
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = [
  "numpy",
  "networkx",
  "sympy",
  "sphinx",
  "matplotlib",
]

[project.urls]
Repository = "https://github.com/indiamai/fuse.git"

[project.optional-dependencies]
docs = [
  "sphinx",
  "numpydoc",
  "sphinx-bootstrap-theme",
  "sphinx_design",
  "sphinxcontrib-fulltoc",
  "sphinx_remove_toctrees",
]
dev = [
  "pytest",
  "pytest-env",
  "pytest-mock",
  "coverage",
  "flake8",
]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
env = [
    "FIREDRAKE_USE_FUSE=True"
]

[tool.coverage.run]
include=[
    "fuse/*",
]